# miu-1

./: .arcconfig  .gitignore  .gitmodules  .hlint.yaml  Cargo.toml  Readme.rst  azure-pipelines.yml  rust-toolchain  stack.yaml
.github/: Contributing.rst
miudoc/: Cargo.toml  Readme.rst
miudoc/doc/: Guide.rst
miudoc/licenses/: BSD-2-Clause_markdeep
miudoc/src/: lib.rs
miudoc/src/diagram/: decoration.rs  grid.rs  mod.rs  path.rs  primitives.rs  rustfmt.toml  to_svg.rs  v2.rs
miudoc/test/: spec.rs
miudoc/test/diagram_spec/: mod.rs
miuhi/: Readme.md  package.yaml
miuhi/src/: Syntax.hs
miuki/: Cargo.toml  ChangeLog.md  README.md  Readme.md  build.rs  package.yaml
miuki-hs/: .gitignore  README.md  package.yaml
miuki-hs/src/: Syntax.hs
miuki/bench/: 10k_parse.rs
miuki/bench/samples/: generate.py
miuki/miu-ts-parser/: grammar.js  package.json  test.miu
miuki/miu-ts-parser/src/: scanner.cc
miuki/notes/: Applicative.miu  Containers.miu  Convert.miu  architecture.rst  ballpark_numbers.rst  memory_rep.rst  parallel.rst  type_errors.md
miuki/src/: ast.rs  intern.rs  lexer.rs  lib.rs  main.rs  mstring.rs  parser.lalrpop  parser.rs  pos.rs  span.rs
miuki/test/: gen.py
miuki/tree-sitter-miu/: grammar.js  test.miu
miuki/tree-sitter-miu/src/: parser.c
miumiugo/: Cargo.toml
miuri/: Cargo.toml  Readme.md  build.rs
miuri/bench/: 10k_parse.rs
miuri/bench/samples/: generate.hs
miuri/notes/: Containers.miu  architecture.rst  ballpark_numbers.rst  libraries.rst  parallel.rst  ux.md
miuri/src/: intern.rs  lib.rs  main.rs
miuri/src/syntax/: abstract.rs
miuri/tree-sitter-miu/: grammar.js  test.miu  test2.miu
miuri/tree-sitter-miu/src/: parser.c  scanner.cc
miuspec/: lang.rst  miu's_values.md
notes/: Convert.miu  MacroDemo.miu  Uncategorized.rst  compiler_speed_and_architecture.md  libraries.rst  memory_rep.rst  memory_representation.md  roadmap.md
numark/: Cargo.toml  Readme.md  Readme.rst
numark/doc/: Guide.rst  devnotes.rst
numark/src/: lib.rs  main.rs
numark/src/diagram/: decoration.rs  grid.rs  mod.rs  path.rs  primitives.rs  to_svg.rs  v2.rs
numark/test/: spec.rs
sanna/: Readme.md  package.yaml
sanna/src/: Main.hs
sanna/src/Sanna/: Prelude.hs
sojiro/: Cargo.toml  Readme.rst
