[package]
name = "miudoc"
version = "0.0.0"
authors = ["Varun Gandhi <theindigamer15@gmail.com>"]
license = "BSD-3-Clause"

[lib]
name = "libmiudoc"
path = "src/lib.rs"

[[bin]]
name = "miu-doc"
path = "src/main.rs"

[dependencies]
# TODO: Put proper versions here...
regex = "*"
unicode-width = "*"
fnv = "*"
svg = "*"
