[package]
name = "miuki"
version = "0.0.0"
authors = ["Varun Gandhi <theindigamer15@gmail.com>"]
build = "build.rs"

[lib]
name = "miuki"
path = "src/lib.rs"

[[bin]]
name = "miu"
path = "src/main.rs"

[build-dependencies.lalrpop]
path = 'lalrpop/lalrpop'

[dependencies.lalrpop-util]
path = 'lalrpop/lalrpop-util'

[dependencies]
typed-arena = "^1.4.1"
ramp = "^0.4.1"
regex = "*"
istring = "^0.1.12"
plex = "^0.2.2"