[package]
name = "miuki"
version = "0.0.0"
authors = ["Varun Gandhi <theindigamer15@gmail.com>"]
build = "build.rs"

[lib]
name = "miuki"
path = "src/lib.rs"

[[bin]]
name = "miu"
path = "src/main.rs"

[[bench]]
name = "10k_parse"
path = "bench/10k_parse.rs"
harness = false

[dependencies]
typed-arena = "^1.4.1"
ramp = "^0.4.1"
regex = "*"
istring = "^0.1.12"
plex = "^0.2.2"
lalrpop-util = {git = "https://github.com/nikomatsakis/lalrpop", branch = "master"}

[build-dependencies]
lalrpop = {git = "https://github.com/nikomatsakis/lalrpop", branch = "master"}

[dev-dependencies]
plex = "^0.2.2"
criterion = "^0.2.3"