[package]
name = "miuki"
version = "0.0.0"
authors = ["Varun Gandhi <theindigamer15@gmail.com>"]
license = "MPL-2.0"

[lib]
name = "miuki"
path = "src/lib.rs"

[[bin]]
name = "miu"
path = "src/main.rs"

[[bench]]
name = "10k_parse"
path = "bench/10k_parse.rs"
harness = false

[dependencies]
typed-arena = "^1.4.1"
ramp = "^0.4.1"
regex = "*"
plex = "*"

[dev-dependencies]
criterion = "^0.2.3"
quickcheck = "^0.8.2"
quickcheck_macros = "*"
