[package]
name = "miuri"
version = "0.0.0"
authors = ["Varun Gandhi <theindigamer15@gmail.com>"]
license = "MPL-2.0"

[lib]
name = "miuri"
path = "src/lib.rs"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "miu"
path = "src/main.rs"

[[bench]]
name = "10k_parse"
path = "bench/10k_parse.rs"
harness = false

[dependencies]
typed-arena = "^1.4.1"
ramp = "^0.4.1"
regex = "*"
plex = "*"
tree-sitter = "^0.3.9"
pretty = "^0.5.2"

[dev-dependencies]
criterion = "^0.2.3"
quickcheck = "^0.8.2"
quickcheck_macros = "*"
